# src/index.ts
@@ -3,6 +3,7 @@ import dotenv from 'dotenv'
 import express from 'express'
 import loginRouter from './routes/loginRouter'
 import verifyRouter from './routes/verifyRouter'
+import currentRouter from './routes/currentRouter'
 import { swaggerRouter } from './swagger/router'
 dotenv.config()
 
@@ -12,9 +13,10 @@ app.use(express.json())
 
 const port = process.env.PORT || 9001
 
-app.use(['/login', '/reset'], loginRouter())
 app.use('/verify', verifyRouter())
+app.use('/current', currentRouter())
 app.use('/api_docs', swaggerRouter)
+app.use(['/login', '/reset'], loginRouter())
 
 app.listen(port, () => {
   console.log(`Server is running on port: ${port}`)
