# src/swagger/swagger.json
@@ -1,15 +1,19 @@
 {
   "openapi": "3.0.3",
+
   "info": {
     "title": "Authentication API",
     "version": "1.0.0"
   },
+
   "servers": [
     {
       "url": "photo-drop2.onrender.com"
     }
   ],
+
   "tags": [{ "name": "Authentication" }],
+
   "paths": {
     "/login": {
       "post": {
@@ -112,8 +116,47 @@
           }
         }
       }
+    },
+    "/current": {
+      "get": {
+        "tags": ["Authentication"],
+        "summary": "Get current user information",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Bearer Authorization Token",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Current user information",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CurrentUser"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
     }
   },
+
   "components": {
     "schemas": {
       "PhoneNumber": {
@@ -185,6 +228,31 @@
           "verificationToken": {
             "type": "string",
             "example": "967986"
+          },
+          "avatar": {
+            "type": "string",
+            "example": "https://www.example.com/image.png"
+          }
+        }
+      },
+      "CurrentUser": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "9462b20d-3a7f-49c1-bc8a-e1c5345c271f"
+          },
+          "phone": {
+            "type": "string",
+            "example": "+380987654321"
+          },
+          "name": {
+            "type": "string",
+            "example": "test"
+          },
+          "email": {
+            "type": "string",
+            "example": "test@example.com"
           },
           "avatar": {
             "type": "string",
